# kmedoid-discretizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: .publish.yml  .test.yml
kmedoid_discretizer/: discretizer.py
kmedoid_discretizer/utils/: utils_discretizer.py  utils_external.py
test/: test_discritizer.py
